# LLM-Task-Orchestrator

./: README.md  setup.py
.service-meta/: README.md
chat_integrations/: README.md  agent.ts
chat_integrations/examples/: reasoning.ts
chat_integrations/plans/: discord_bot_deployment_plan.md
engine/: README.md  crew.py  main.py  pyproject.toml  robots.txt
engine/.well-known/: agent-guide.md  agent-manifest.json  ai-plugin.json  health.json  openapi.yaml
engine/config/: agents.yaml
engine/docs/: advanced_implementations.md  configuration.md  human_in_the_loop.md  memory_and_storage.md  readme.md  templates.md
engine/examples/: README.md
service-meta/: README.md  agent.ts
standalone_agent/examples/: reasoning.ts
