[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_task_orchestrator"
version = "0.1.0"
authors = [
    { name = "Parvez Khan" },
]
description = "LLM Task Orchestrator for building and managing autonomous AI task workflows"
requires-python = ">=3.8"
dependencies = [
    "crewai[local]>=0.1.0",
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.24.0"
]
